# pythonweb-10

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b901316a63a9_edit_user_model_adjust_email_and_hashed_.py  c35d1ccf6860_add_user_model_link_user_with_contact.py
src/api/: __init__.py  auth_router.py  contact_router.py  user_router.py  util_router.py
src/conf/: config.py
src/database/: db.py
src/database/models/: __init__.py  contact_model.py  user_model.py
src/repository/: __init__.py  contact_repository.py  user_repository.py
src/schemas/: __init__.py  schemas.py  user_schema.py
src/services/: __init__.py  auth_service.py  contact_service.py  dependencies.py  email_service.py  user_service.py
