[project]
name = "pythonweb-08"
version = "0.1.0"
description = ""
authors = [
    {name = "yarqui",email = "y.pelykh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0015, C0116, R0913, R0917"

[tool.pylint.main]
source-roots = ["."]